# opensearch-curator

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LOGGING_FIX.md  MIGRATION_PROGRESS.md  Makefile  NEXT_STEPS.md  OPENSEARCH_CLIENT_MIGRATION_STATUS.md  OPENSEARCH_COMPATIBILITY.md  OPENSEARCH_PY_3.0.md  QUICKSTART.md  README.md  README_FIRST.md  RECENT_UPDATES.md  SESSION_SUMMARY.md  TESTING.md  TEST_FAILURE_ANALYSIS.md  TEST_FIX_SUMMARY.md  analyze_tests.py  cleanup_plan.ps1  debug_error.py  docker-compose.secure.yml  docker-compose.test.yml  docker-compose.yml  make.ps1  pyproject.toml  run_tests.ps1  setup_remote_tests.sh  test_builder.py  test_connection.py  uv.toml
.github/scripts/: bump_version.py
.github/workflows/: README.md  build.yml  integration.yml  lint.yml  release.yml  test.yml
certs/: README.md
config/opensearch-security/: internal_users.yml
curator/: __init__.py  _version.py  classdef.py  cli.py  exceptions.py  indexlist.py  repomgrcli.py  singletons.py  snapshotlist.py
curator/actions/: __init__.py  alias.py  allocation.py  close.py  cluster_routing.py  cold2frozen.py  convert_index_to_remote.py  create_index.py  delete_indices.py  forcemerge.py  index_settings.py  open.py  reindex.py  replicas.py  rollover.py  shrink.py  snapshot.py
curator/cli_singletons/: __init__.py  allocation.py  close.py  convert_index_to_remote.py  delete.py  forcemerge.py  object_class.py  open_indices.py  replicas.py  rollover.py  show.py  shrink.py  snapshot.py  utils.py
curator/defaults/: option_defaults.py  settings.py
curator/helpers/: __init__.py  date_ops.py  getters.py  tasks.py  testers.py  utils.py  waiters.py
curator/validators/: actions.py  filter_functions.py  options.py
docs/: CONVERT_INDEX_TO_REMOTE.md  Changelog.rst  NEXT_STEPS.md  README.md  STATUS.md  conf.py  contributing.rst  requirements.txt
docs/archive/: CONVERT_INDEX_TO_REMOTE_SUMMARY.md  DEVELOPMENT_CONVENTIONS.md  DOCKER_TESTING.md  INTEGRATION_TEST_RESULTS.md  MIGRATION_CHECKLIST.md  OPENSEARCH_COMPATIBILITY.md  QUICKSTART.md  README_OPENSEARCH.md  RECENT_UPDATES.md
docs/asciidoc/: about.asciidoc  configuration.asciidoc
docs/dev/: AGENTS.md  MIGRATION_PROGRESS.md  OPENSEARCH_API_FIXES.md  SESSION_SUMMARY.md  TESTING.md
docs/reference/: about-api.md  about-contributing.md  configfile.md
examples/: curator.yml
examples/actions/: convert_index_to_remote.yml
examples/local-test/: 01-delete-test-indices.yml  05-force-merge.yml  06-reduce-replicas.yml  08-convert-to-remote-delete.yml  09-convert-existing-snapshot.yml  README.md  create-test-data.sh  curator.yml  run-curator.sh
opensearch_client/: MIGRATION.md  MIGRATION_STATUS.md  README.md  README_ORIGINAL.rst  __init__.py  builder.py  cli_example.py  commands.py  config.py  defaults.py  exceptions.py  logging.py  schemacheck.py  utils.py
opensearch_client/helpers/: config.py  logging.py  schemacheck.py  utils.py
opensearch_client/tests/: README.md  pytest.ini
scripts/: README.md  __init__.py  cleanup_plan.ps1  generate_test_certs.py  setup_remote_tests.ps1  setup_remote_tests.sh  start-opensearch.bat  start-opensearch.sh  stop-opensearch.bat  stop-opensearch.sh
test-environments/: README.md
test-environments/compose/: docker-compose.dev.yml  docker-compose.test.yml  init-security.sh  update_admin_password.sh
test-environments/local-runner/: 02-delete-old-test-indices.yml  03-create-snapshot.yml  04-close-old-indices.yml  07-convert-to-remote-safe.yml  10-convert-custom-alias.yml  README.md  create-test-data.ps1  create-test-data.sh  curator.yml  run-curator.sh
tests/: conftest.py
tests/integration/: README_REMOTE_TESTS.md  __init__.py  test_alias.py  test_allocation.py  test_cli.py  test_close.py  test_convert_index_to_remote.py  test_convert_smoke.py  test_count_pattern.py  test_create_index.py  test_datemath.py  test_delete_indices.py  test_es_repo_mgr.py  test_integrations.py  test_open.py  test_reindex.py  test_restore.py  test_rollover.py  test_shrink.py  testvars.py
tests/unit/: __init__.py  test_action_alias.py  test_action_allocation.py  test_action_close.py  test_action_clusterrouting.py  test_action_cold2frozen.py  test_action_create_index.py  test_action_delete_indices.py  test_action_delete_snapshots.py  test_action_forcemerge.py  test_action_indexsettings.py  test_action_open.py  test_action_reindex.py  test_action_replicas.py  test_action_restore.py  test_settings.py  (+10 more)
(+13 files in other folders)
