[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.1",
    "pytest-cov",
    "black>=24.3.0",
    "mypy>=1.8.0",
    "ruff>=0.5.1",
    "pylint>=3.1.0",
    "boto3>=1.28.0",  # For LocalStack S3 testing
    "botocore>=1.31.0",  # Required by boto3
]

[tool.uv.sources]
# Use UV for faster dependency resolution
# UV will be used automatically if available

[project]
name = "opensearch-curator"
authors = [
    { name="Elastic", email="info@elastic.co" },
    { name="OpenSearch Curator Contributors" }
]
dynamic = ["version"]
description = "Tending your OpenSearch indices and snapshots"
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    'opensearch',
    'elasticsearch',
    'time-series',
    'indexed',
    'index-expiry'
]
dependencies = [
    "opensearch-py>=3.0.0,<4.0.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "voluptuous>=0.14.1",
    "certifi>=2023.11.17",
    "dotmap>=1.3.30",
    "cryptography>=41.0.0",
    "ecs-logging>=2.0.0",
    "tiered-debug>=1.4.0",
    "elastic-transport>=8.13.0",
]

[project.optional-dependencies]
test = [
    "requests",
    "pytest >=7.2.1",
    "pytest-cov",
]
doc = ["sphinx", "sphinx_rtd_theme"]

[project.scripts]
curator = "curator.cli:cli"
curator_cli = "curator.singletons:curator_cli"
opensearch_repo_mgr = "curator.repomgrcli:repo_mgr_cli"

[project.urls]
"Homepage" = "https://github.com/polecat-dev/opensearch-curator"
"Bug Tracker" = "https://github.com/polecat-dev/opensearch-curator/issues"

[tool.hatch.version]
path = "curator/_version.py"

[tool.hatch.module]
name = "curator"

[tool.hatch.build]
include = [
  "curator/*.py",
  "curator/actions/*.py",
  "curator/cli_singletons/*.py",
  "curator/defaults/*.py",
  "curator/helpers/*.py",
  "curator/validators/*.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "dist",
    "docs",
    "docker_test",
    "examples",
    "html_docs",
    "tests",
]

### Docker Environment
[tool.hatch.envs.docker]
platforms = ["linux", "macos"]

[tool.hatch.envs.docker.scripts]
create = "docker_test/scripts/create.sh {args}"
destroy = "docker_test/scripts/destroy.sh"

### Lint environment
[tool.hatch.envs.lint]
detached = true
installer = "uv"
dependencies = [
  'black>=23.1.0',
  'mypy>=1.0.0',
  'ruff>=0.0.243',
]

[tool.hatch.envs.lint.scripts]
run-pyright = "pyright {args:.}"
run-black = "black --quiet --check --diff {args:.}"
run-ruff = "ruff check --quiet {args:.}"
run-curlylint = "curlylint {args:.}"
python = ["run-pyright", "run-black", "run-ruff"]
templates = ["run-curlylint"]
all = ["python", "templates"]

[tool.pylint.format]
max-line-length = "88"

[tool.black]
target-version = ['py38']
line-length = 88
skip-string-normalization = true
include = '\.pyi?$'

### Test environment
[tool.hatch.envs.test]
platforms = ["linux", "macos", "windows"]
installer = "uv"
dependencies = [
    "requests",
    "pytest >=7.2.1",
    "pytest-cov"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.test.scripts]
pytest = "source docker_test/.env; pytest"
pytest-cov = "source docker_test/.env; pytest --cov=curator"
pytest-cov-report = "source docker_test/.env; pytest --cov=curator --cov-report=term-missing"

[tool.pytest.ini_options]
pythonpath = [".", "curator"]
minversion = "7.2"
addopts = "-ra -q"
testpaths = [
    "tests/unit",
    "tests/integration",
]

[tool.distutils.build_exe]
excludes = ["tcltk", "tkinter", "unittest"]
zip_include_packages = ["certifi"]

[tool.cxfreeze]
executables = [
    {script="run_curator.py", target_name="curator"},
    {script="run_singleton.py", target_name="curator_cli"},
    {script="run_es_repo_mgr.py", target_name="es_repo_mgr"},
]

[tool.cxfreeze.build_exe]
excludes = ["tcltk", "tkinter", "unittest"]
zip_include_packages = ["certifi"]
